--- a/Dockerfile.ros.melodic
+++ b/Dockerfile.ros.melodic
@@ -12,6 +12,12 @@ ENV ROS_ROOT=/opt/ros/${ROS_DISTRO}
 ENV DEBIAN_FRONTEND=noninteractive
 
 WORKDIR /workspace
+RUN apt-get update && \
+    apt-get -y install ca-certificates
+
+RUN apt-get install --assume-yes apt-utils
+
+ADD ./sources.list /etc/apt
 
 # add the ROS deb repo to the apt sources list
 RUN apt-get update && \
@@ -23,11 +29,13 @@ RUN apt-get update && \
 		wget \
 		gnupg2 \
 		lsb-release \
-		ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
-RUN sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
-RUN curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add -
+RUN mkdir ~/.gnupg && echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf
+
+RUN sh -c '. /etc/lsb-release && echo "deb http://mirrors.tuna.tsinghua.edu.cn/ros/ubuntu/ `lsb_release -cs` main" > /etc/apt/sources.list.d/ros-latest.list'
+RUN apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
+
 
 # install ROS packages
 RUN apt-get update && \
@@ -39,13 +47,20 @@ RUN apt-get update && \
           python-rosinstall \
           python-rosinstall-generator \
           python-wstool \
+          python3-pip  \
     && rm -rf /var/lib/apt/lists/*
 
+RUN python3 -m pip install --upgrade pip setuptools wheel
+
+RUN pip3 install rosdepc
 # init/update rosdep
 RUN apt-get update && \
     cd ${ROS_ROOT} && \
-    rosdep init && \
-    rosdep update && \
+    export LC_ALL='en_US.utf8' && \
+    rosdepc init && \
+    rosdepc update && \
+    rosdepc update --include-eol && \
+    rosdepc install --from-paths src --ignore-src --rosdistro=$ROS_DISTRO -y && \
     rm -rf /var/lib/apt/lists/*
 
 # setup entrypoint
