--- a/Dockerfile.vins.gpu
+++ b/Dockerfile.vins.gpu
@@ -194,7 +194,7 @@ RUN cd $HOME/catkin_ws/ &&\
 #
 RUN apt install -y rsync
 # dependencies
-RUN apt-get install -y libssl-dev freeglut3-dev libusb-1.0-0-dev pkg-config libgtk-3-dev unzip
+RUN apt-get install -y libssl-dev freeglut3-dev libusb-1.0-0-dev pkg-config libgtk-3-dev unzip libudev-dev libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev at
 
 # From source
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-key F6E65AC044F831AC80A06380C8B3A55A6F3EFCDE || apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-key F6E65AC044F831AC80A06380C8B3A55A6F3EFCDE
@@ -207,6 +207,7 @@ RUN cd $HOME/src/librealsense-2.48.0/config &&\
 RUN cd $HOME/src/librealsense-2.48.0/ && mkdir build && cd build &&\
     cmake ../ \
         -DFORCE_RSUSB_BACKEND=true \
+        -DCMAKE_CXX_STANDARD=14 \
         -DCMAKE_BUILD_TYPE=release \
         -DBUILD_EXAMPLES=true \
         -DBUILD_WITH_CUDA=true \
